--- a/bbl/i18n/de/BambuStudio_de.po
+++ b/bbl/i18n/de/BambuStudio_de.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-10-19 09:33+0800\n"
+"POT-Creation-Date: 2022-11-05 12:18+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -2355,9 +2355,6 @@ msgstr "Projekt"
 msgid "Slice"
 msgstr "Slice"
 
-msgid "Send and Print"
-msgstr ""
-
 msgid "Slice all"
 msgstr "Alle Slicen"
 
@@ -2369,9 +2366,6 @@ msgstr "Alle drucken"
 
 msgid "Export G-code file"
 msgstr ""
-
-msgid "Send"
-msgstr "Senden"
 
 msgid "Export sliced file"
 msgstr "Geslicete Datei exportieren"
@@ -2785,6 +2779,10 @@ msgstr "Loading file list..."
 
 msgid "No files"
 msgstr "No files"
+
+#, c-format, boost-format
+msgid "File '%s' was lost! Please download it again."
+msgstr ""
 
 msgid "Download waiting..."
 msgstr ""
@@ -3873,6 +3871,9 @@ msgstr "Bambu technische Druckplatte"
 msgid "Bamabu High Temperature Plate"
 msgstr "Bambu Hochtemperaturdruckplatte"
 
+msgid "Send print job to"
+msgstr "Druckauftrag senden an"
+
 msgid "Refresh"
 msgstr "Aktualisieren"
 
@@ -3882,8 +3883,8 @@ msgstr "Druckbettnivellierung"
 msgid "Flow Calibration"
 msgstr "Durchfluss-Kalibrierung"
 
-msgid "Can't connect to the printer"
-msgstr ""
+msgid "Send"
+msgstr "Senden"
 
 msgid "send completed"
 msgstr "senden abgeschlossen"
@@ -5741,24 +5742,32 @@ msgid "Height to rod"
 msgstr "Höhe zur Stange"
 
 msgid ""
-"Distance of the nozzle tip to the lower rod. Used as input of auto-arranging "
-"to avoid collision when printing by object"
+"Distance of the nozzle tip to the lower rod. Used for collision avoidance in "
+"by-object printing."
 msgstr ""
 
 msgid "Height to lid"
 msgstr "Höhe zum Deckel"
 
 msgid ""
-"Distance of the nozzle tip to the lid. Used as input of auto-arranging to "
-"avoid collision when printing by object"
+"Distance of the nozzle tip to the lid. Used for collision avoidance in by-"
+"object printing."
 msgstr ""
 
 msgid "Radius"
 msgstr "Radius"
 
 msgid ""
-"Clearance radius around extruder. Used as input of auto-arranging to avoid "
-"collision when printing by object"
+"Clearance radius around extruder. Used for collision avoidance in by-object "
+"printing."
+msgstr ""
+
+msgid "Max Radius"
+msgstr ""
+
+msgid ""
+"Max clearance radius around extruder. Used for collision avoidance in by-"
+"object printing."
 msgstr ""
 
 msgid "Extruder Color"
@@ -7424,9 +7433,6 @@ msgstr ""
 
 #~ msgid "Open"
 #~ msgstr "Open"
-
-#~ msgid "Send print job to"
-#~ msgstr "Druckauftrag senden an"
 
 #~ msgid ""
 #~ "%1% is too close to exclusion area, there will be collisions when "
