--- a/bbl/i18n/es/BambuStudio_es.po
+++ b/bbl/i18n/es/BambuStudio_es.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-10-19 09:33+0800\n"
+"POT-Creation-Date: 2022-11-05 12:18+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -2353,9 +2353,6 @@ msgstr "Proyecto"
 msgid "Slice"
 msgstr "Laminar"
 
-msgid "Send and Print"
-msgstr ""
-
 msgid "Slice all"
 msgstr "Laminar todo"
 
@@ -2367,9 +2364,6 @@ msgstr "Imprimir todo"
 
 msgid "Export G-code file"
 msgstr ""
-
-msgid "Send"
-msgstr "Enviar"
 
 msgid "Export sliced file"
 msgstr "Exportar archivo rebanado"
@@ -2783,6 +2777,10 @@ msgstr "Loading file list..."
 
 msgid "No files"
 msgstr "No files"
+
+#, c-format, boost-format
+msgid "File '%s' was lost! Please download it again."
+msgstr ""
 
 msgid "Download waiting..."
 msgstr ""
@@ -3870,6 +3868,9 @@ msgstr "Placa de Ingenieria Bambu"
 msgid "Bamabu High Temperature Plate"
 msgstr "Placa de alta temperatura Bambu"
 
+msgid "Send print job to"
+msgstr "Enviar el trabajo de impresión a"
+
 msgid "Refresh"
 msgstr "Actualizar"
 
@@ -3879,8 +3880,8 @@ msgstr "Nivelación de la cama"
 msgid "Flow Calibration"
 msgstr "Calibración del flujo"
 
-msgid "Can't connect to the printer"
-msgstr ""
+msgid "Send"
+msgstr "Enviar"
 
 msgid "send completed"
 msgstr "envío completo"
@@ -5727,24 +5728,32 @@ msgid "Height to rod"
 msgstr "Altura a la barra"
 
 msgid ""
-"Distance of the nozzle tip to the lower rod. Used as input of auto-arranging "
-"to avoid collision when printing by object"
+"Distance of the nozzle tip to the lower rod. Used for collision avoidance in "
+"by-object printing."
 msgstr ""
 
 msgid "Height to lid"
 msgstr "Altura hasta la tapa"
 
 msgid ""
-"Distance of the nozzle tip to the lid. Used as input of auto-arranging to "
-"avoid collision when printing by object"
+"Distance of the nozzle tip to the lid. Used for collision avoidance in by-"
+"object printing."
 msgstr ""
 
 msgid "Radius"
 msgstr "Radio"
 
 msgid ""
-"Clearance radius around extruder. Used as input of auto-arranging to avoid "
-"collision when printing by object"
+"Clearance radius around extruder. Used for collision avoidance in by-object "
+"printing."
+msgstr ""
+
+msgid "Max Radius"
+msgstr ""
+
+msgid ""
+"Max clearance radius around extruder. Used for collision avoidance in by-"
+"object printing."
 msgstr ""
 
 msgid "Extruder Color"
@@ -7408,9 +7417,6 @@ msgstr ""
 
 #~ msgid "Open"
 #~ msgstr "Open"
-
-#~ msgid "Send print job to"
-#~ msgstr "Enviar el trabajo de impresión a"
 
 #~ msgid ""
 #~ "%1% is too close to exclusion area, there will be collisions when "
