--- a/bbl/i18n/nl/BambuStudio_nl.po
+++ b/bbl/i18n/nl/BambuStudio_nl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-10-19 09:33+0800\n"
+"POT-Creation-Date: 2022-11-05 12:18+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -2350,9 +2350,6 @@ msgstr "Project"
 msgid "Slice"
 msgstr "Slice"
 
-msgid "Send and Print"
-msgstr ""
-
 msgid "Slice all"
 msgstr "Alles slicen"
 
@@ -2364,9 +2361,6 @@ msgstr "Print alles"
 
 msgid "Export G-code file"
 msgstr ""
-
-msgid "Send"
-msgstr "Versturen"
 
 msgid "Export sliced file"
 msgstr "Exporteer het \"sliced\" bestand"
@@ -2780,6 +2774,10 @@ msgstr "Bestandslijst laden..."
 
 msgid "No files"
 msgstr "Geen bestanden"
+
+#, c-format, boost-format
+msgid "File '%s' was lost! Please download it again."
+msgstr ""
 
 msgid "Download waiting..."
 msgstr ""
@@ -3876,6 +3874,9 @@ msgstr "Bambu Engineering (technische) plate"
 msgid "Bamabu High Temperature Plate"
 msgstr "Bambu High Temperature (hoge temperatuur) Plate"
 
+msgid "Send print job to"
+msgstr "Stuur de printtaak naar"
+
 msgid "Refresh"
 msgstr "Vernieuwen"
 
@@ -3885,8 +3886,8 @@ msgstr "Bed leveling"
 msgid "Flow Calibration"
 msgstr "Flow calibratie"
 
-msgid "Can't connect to the printer"
-msgstr ""
+msgid "Send"
+msgstr "Versturen"
 
 msgid "send completed"
 msgstr "Versturen gelukt"
@@ -5732,24 +5733,32 @@ msgid "Height to rod"
 msgstr "Hoogte tot geleider"
 
 msgid ""
-"Distance of the nozzle tip to the lower rod. Used as input of auto-arranging "
-"to avoid collision when printing by object"
+"Distance of the nozzle tip to the lower rod. Used for collision avoidance in "
+"by-object printing."
 msgstr ""
 
 msgid "Height to lid"
 msgstr "Hoogte tot deksel"
 
 msgid ""
-"Distance of the nozzle tip to the lid. Used as input of auto-arranging to "
-"avoid collision when printing by object"
+"Distance of the nozzle tip to the lid. Used for collision avoidance in by-"
+"object printing."
 msgstr ""
 
 msgid "Radius"
 msgstr "Straal"
 
 msgid ""
-"Clearance radius around extruder. Used as input of auto-arranging to avoid "
-"collision when printing by object"
+"Clearance radius around extruder. Used for collision avoidance in by-object "
+"printing."
+msgstr ""
+
+msgid "Max Radius"
+msgstr ""
+
+msgid ""
+"Max clearance radius around extruder. Used for collision avoidance in by-"
+"object printing."
 msgstr ""
 
 msgid "Extruder Color"
@@ -7423,9 +7432,6 @@ msgstr ""
 
 #~ msgid "Open"
 #~ msgstr "Open"
-
-#~ msgid "Send print job to"
-#~ msgstr "Stuur de printtaak naar"
 
 #~ msgid ""
 #~ "%1% is too close to exclusion area, there will be collisions when "
