--- a/bbl/i18n/list.txt
+++ b/bbl/i18n/list.txt
@@ -90,6 +90,7 @@ src/slic3r/GUI/Selection.cpp
 src/slic3r/GUI/SelectMachine.cpp
 src/slic3r/GUI/SendSystemInfoDialog.cpp
 src/slic3r/GUI/SendToPrinter.cpp
+src/slic3r/GUI/SetBedTypeDialog.cpp
 src/slic3r/GUI/BindDialog.cpp
 src/slic3r/GUI/Tab.cpp
 src/slic3r/GUI/Tab.hpp
